salesforce-port/force-app/main/default/objects/Policy_Member__c/Policy_Member__c.object-meta.xml
<CustomObject>
    <label>Policy Member</label>
    <nameField>
        <displayFormat>PM-{000000}</displayFormat>
        <label>Membership Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Policy Members</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>