salesforce-port/force-app/main/default/objects/Policy_Member__c/fields/Policy__c.field-meta.xml
<CustomField>
    <fullName>Policy__c</fullName>
    <label>Policy</label>
    <type>MasterDetail</type>
    <referenceTo>Expense_Policy__c</referenceTo>
    <relationshipLabel>Members</relationshipLabel>
    <relationshipName>Members</relationshipName>
    <relationshipOrder>0</relationshipOrder>
</CustomField>