salesforce-port/force-app/main/default/objects/Policy_Member__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <label>Role</label>
    <type>Picklist</type>
    <required>true</required>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Admin</fullName><default>false</default><label>Admin</label></value>
            <value><fullName>Approver</fullName><default>false</default><label>Approver</label></value>
            <value><fullName>Member</fullName><default>true</default><label>Member</label></value>
            <value><fullName>Auditor</fullName><default>false</default><label>Auditor</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>