salesforce-port/force-app/main/default/objects/Policy_Member__c/fields/Submits_To__c.field-meta.xml
<CustomField>
    <fullName>Submits_To__c</fullName>
    <label>Submits To</label>
    <type>Lookup</type>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Direct Reports</relationshipLabel>
    <relationshipName>Direct_Reports</relationshipName>
</CustomField>