salesforce-port/force-app/main/default/objects/Policy_Member__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <label>User</label>
    <type>Lookup</type>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Policy Memberships</relationshipLabel>
    <relationshipName>Policy_Memberships</relationshipName>
    <required>true</required>
</CustomField>